kubernetes/kc-operator/keycloak-db.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: my-keycloak-operator
spec:
  serviceName: keycloak-postgresql-external
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgresql
  template:
    metadata:
      labels:
        app: keycloak-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-postgresql
              mountPath: /var/lib/postgresql/data
          # command: [ "/bin/bash", "-c", "--" ]
          # args: [ "while true; do sleep 30; done;" ]
         
  volumeClaimTemplates:
  - metadata:
      name: keycloak-postgresql
      namespace: my-keycloak-operator
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nerc-keycloak-storage"
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgresql-external
  namespace: my-keycloak-operator
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: keycloak-postgresql

# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nercra-kc-deployment
#   namespace: my-keycloak-operator
#   labels:
#     app: nercra-kc
# spec:
#   selector:
#     matchLabels:
#       app: nercra-kc
#   template:
#     metadata:
#       labels:
#         app: nercra-kc
#     spec:
#       containers:
#         - name: pgtest
#           image: postgres:10
#           imagePullPolicy: IfNotPresent
#           envFrom:
#             - secretRef:
#                 name: keycloak-db-secret
#           ports:
#             - containerPort: 5433
#           command: [ "/bin/bash", "-c", "--" ]
#           args: [ "while true; do sleep 30; done;" ]
